tests/fail/fail-float1.mc
int main()
{
  -3.5 && 1; /* Float with AND? */
  return 0;
}
